@@ -23,12 +23,16 @@ robot-moving-company.description= Robot Moving Company
 
 module.introduction=Introduction
 module.coordinates=Coordinates
-module.work-energy=Work-Energy
+module.work-energy=Work/Energy
 module.force-graphs=Force Graphs
 module.more-features=More Features
 module.robotMovingCompany=Robot Moving Company
 
-controls.showWorkEnergyCharts = Show Work/Energy Charts
+controls.showWorkEnergyCharts = Show Work/Energy Chart
+controls.work-energy-charts= Work/Energy Chart
+controls.clear-heat = Clear Heat
+controls.show = Show
+controls.hide = Hide
 
 confirm-reset=Are you sure you'd like to reset everything?
 invitation=<html>Apply a Force<br> to the Filing Cabinet</html>
@@ -56,7 +60,9 @@ forces.applied.n=Applied Force (N)
 forces.Gravity=Gravity
 forces.Net=Sum
 forces.parallel-title = Parallel Forces
-forces.work-energy-title = Work-Energy
+forces.work-energy-title = Work/Energy
+forces.parallel-title-with-units = Parallel Forces (N)
+forces.work-energy-title-with-units = Work/Energy (J)
 
 #Forces (with subscript)
 force.subscript=F<sub>{0}</sub>
@@ -98,6 +104,15 @@ energy.total=Total
 0.energy={0} Energy
 0.work={0} Work
 
+energy.total-energy = Total Energy
+energy.kinetic-energy=Kinetic Energy
+energy.potential-energy=Potential Energy
+energy.thermal-energy=Thermal Energy
+
+work.applied-work = Applied Work
+work.friction-work = Friction Work
+work.gravity-work = Gravity Work
+
 work.applied=Applied
 work.gravity=Gravity
 work.friction=Friction
@@ -110,7 +125,7 @@ controls.show-zero-point-pe=Show zero-point PE
 controls.show-free-body-diagram=Free Body Diagram>>
 controls.hide-free-body-diagram=Free Body Diagram<<
 controls.forces-to-show=Forces to Show
-controls.choose-object=Choose Object
+controls.choose-object=Choose an Object
 controls.sound=Sound
 controls.frictionless=Frictionless
 controls.reset=Reset
@@ -162,6 +177,20 @@ coordinates.y-components=Y-Components
 coordinates.x=x
 coordinates.y=y
 coordinates.frames=Coordinate Frames
+coordinates.coordinate-system=Coordinate System
+coordinates.fixed = Fixed
+coordinates.adjustable= Adjustable
+
+vectors.title= Vectors
+vectors.centered = Centered
+vectors.point-of-origin=Point of Origin
+vectors.force-vectors=Force Vectors
+vectors.parallel-components = Parallel Components
+vectors.x-y-components=X-Y Components
+vectors.sum-of-forces=Sum of Forces
+
+ramp.controls.title=Ramp Controls
+object.position = Object Position
 
 #Height indicator
 indicator.height=h=0.0 @ y={0}
