@@ -1,3 +1,4 @@
+Remove wall and normal work from bar chart
 Display wall force when pressing block against the wall
 Update colors for Normal force and Wall force
 Fixed: Reset all should hide the work energy bar chart
